src/main/java/org/example/springsec/ecomm/error/InvalidValueException.java
package org.example.springsec.ecomm.error;

public class InvalidValueException extends RuntimeException {
    public InvalidValueException(String message) {
        super(message);
    }
}
